# tl45-softcore

./: .gitignore  README.MD  tl45_de2.qsf
formal/: .gitignore  alu_tl45.sby  io_scomp_trans.sby  lcd_io.sby  memory.sby  pf_with_cache.sby  prefetch.sby  register_read.sby  sevenseg_io.sby
quartus/: .gitignore  tl45.qpf  tl45.qsf  tl45.qws  tl45.sdc
rtl/: clk_divider.sv  sdram.v  tl45.sv
rtl/bus/: memdev.v  shitmem.v  testbus.v  testbus.v.bak  wbpriarbiter.v  wbscope.v
rtl/de2_bot_bs/: SONAR.vhd  VEL_CONTROL.vhd  fuck_timer.sv  green_leds.sv
rtl/greybox_tmp/: cbx_args.txt
rtl/greybox_tmp/greybox_tmp/: mg0vm.v  mgjch.v
rtl/hexbus/: hbidle.v
rtl/ihex/: ihex.sv  uart_rx.sv  uart_tx.sv  wb_master_breakout.sv  wishbone.sv
rtl/lpm_addsub/greybox_tmp/: cbx_args.txt
rtl/lpm_mult/: alu_mult_altera.qip  alu_mult_altera.v
rtl/plls/: dram_pll.ppf  dram_pll.qip  dram_pll.v  main_pll.qip  main_pll.v  vga_pll.ppf  vga_pll.qip  vga_pll.v
rtl/plls/greybox_tmp/: cbx_args.txt
rtl/sdspi/: sdspi.v
rtl/tl45_core/: KSA32.sv  div.v  tl45_alu.sv  tl45_comp.sv  tl45_decode.sv  tl45_dprf.sv  tl45_look_ahead_adder.sv  tl45_memory.sv  tl45_nofetch.sv  tl45_pfetch_with_cache.sv  tl45_prefetch.sv  tl45_register_read.sv  tl45_register_read.sv.bak  tl45_writeback.sv
rtl/tl45_core/adder/: ks_1.v
rtl/wb_iodevice/: sevenSegmentDisp.sv  wb_block_timer.sv  wb_lcdhd47780.sv  wb_quad_encoder.sv  wb_scomp_trans.sv  wb_sevenseg.sv  wb_switch_led.sv  wb_timer.sv  wb_vga.sv  wbuart_with_buffer.sv
rtl/wbuart_with_ihex/: wbuart_with_ihex.sv
rtl/wishbone_formal/: fwb_slave.v
sw/: fib.s  serial_write.py
tests/wbuart_with_ihex/: .gitignore  CMakeLists.txt  sim_wave_template.gtkw  ver_compile.sh
tests/wbuart_with_ihex/src/: main_ihex_test.cpp  testbench.h
verilator/: .gitignore  CMakeLists.txt  gtkwave.gtkw  main_prefetch.cpp  main_tl45_comp.cpp  main_tl45_io.cpp  testbench.h  trace.vcd  ver_compile.sh  wb_slave.h
verilator/cmake/: FindVerilator.cmake
verilator/src/: main_tl45_comp.cpp  main_tl45_io.cpp  tl45_isa.cpp  tl45_isa.h  wb_slave.h
